--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/ocornut/imgui
 [submodule "extern/ggpo"]
 	path = extern/ggpo
-	url = https://github.com/pond3r/ggpo
+	url = https://github.com/Grouflon/ggpo
 [submodule "extern/SFML"]
 	path = extern/SFML
 	url = https://github.com/SFML/SFML
